# AlgoJudge

./: .dockerignore  .env.example  .gitignore  API.md  Cargo.toml  DESIGN.md  Dockerfile  EXECUTION_FLOW.md  README.md  docker-compose-baremetal.yml  docker-compose.testing.yml  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: main.yml
config/: prometheus.yml
crates/horus/: Cargo.toml
crates/horus/src/: cleaner.rs  config.rs  config_reload.rs  main.rs  scheduler.rs  specs.rs
crates/minos/: Cargo.toml
crates/minos/src/: config.rs  consumer.rs  executor.rs  main.rs  metrics.rs  sandbox.rs  testcase.rs  verdict.rs
crates/olympus-common/: Cargo.toml
crates/olympus-common/src/: error.rs  lib.rs  types.rs
crates/olympus-rules/: Cargo.toml
crates/olympus-rules/src/: auth_rules.rs  config.rs  context.rs  lib.rs  operators.rs  registry.rs  rules.rs  specification.rs
crates/sisyphus/: Cargo.toml
crates/sisyphus/src/: compiler.rs  config.rs  consumer.rs  container.rs  main.rs
crates/vanguard/: Cargo.toml
crates/vanguard/migrations/: 20260101000001_create_users_and_sessions.sql  20260102000001_create_contests_and_problems.sql  20260103000001_create_submissions.sql  20260104000001_add_upload_limits.sql  20260105000001_standalone_submissions_and_queue_pending.sql  20260106000001_add_threads_and_network_to_problems.sql  20260106000001_create_rule_configs.sql
crates/vanguard/src/: config.rs  error.rs  main.rs  state.rs  test_utils.rs
crates/vanguard/src/domain/: authorization.rs  mod.rs
crates/vanguard/src/domain/admin/: handler.rs  mod.rs  request.rs  response.rs
crates/vanguard/src/domain/auth/: handler.rs  jwt.rs  mod.rs  request.rs  response.rs
crates/vanguard/src/domain/contests/: handler.rs  mod.rs  request.rs  response.rs
crates/vanguard/src/domain/health/: handler.rs  mod.rs
crates/vanguard/src/domain/problems/: handler.rs  mod.rs  request.rs  response.rs
crates/vanguard/src/domain/submissions/: handler.rs  mod.rs  request.rs  response.rs
crates/vanguard/src/domain/users/: handler.rs  mod.rs  request.rs  response.rs
crates/vanguard/src/middleware/: auth.rs  rate_limit.rs
docker/images/: build-all.sh
docker/images/c/: Dockerfile
docker/images/cpp/: Dockerfile
docker/images/go/: Dockerfile
docker/images/python/: Dockerfile
docker/images/rust/: Dockerfile
docker/images/zig/: Dockerfile
docs/: API.md  CONTESTANT_GUIDE.md  EXECUTION_FLOW.md  QUESTION_SETTER_GUIDE.md  SPEC_REGISTRY.md
migrations/: 20240115000000_initial_schema.sql  20260201000000_algorithmic_benchmark_redesign.sql
scripts/: start.sh
src/: config.rs  constants.rs  error.rs  lib.rs  main.rs  state.rs
src/benchmark/: algo_runner.rs  container.rs  metrics.rs  mod.rs  runner.rs
src/benchmark/languages/: c.rs  cpp.rs  go.rs  mod.rs  python.rs  rust.rs  zig.rs
src/db/: connection.rs  mod.rs
src/db/repositories/: contest_repo.rs  mod.rs  problem_repo.rs  submission_repo.rs  user_repo.rs
src/handlers/: health.rs  mod.rs
src/handlers/admin/: handler.rs  mod.rs  request.rs  response.rs
src/handlers/auth/: handler.rs  mod.rs  request.rs  response.rs
src/handlers/contests/: handler.rs  mod.rs  request.rs  response.rs
src/handlers/problems/: handler.rs  mod.rs  request.rs  response.rs
src/handlers/submissions/: handler.rs  mod.rs  request.rs  response.rs
src/handlers/users/: handler.rs  mod.rs  request.rs  response.rs
src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs
src/models/: benchmark.rs  collaborator.rs  contest.rs  mod.rs  problem.rs  runtime.rs  submission.rs  test_case.rs  user.rs
src/services/: admin_service.rs  auth_service.rs  benchmark_service.rs  contest_service.rs  mod.rs  problem_service.rs  submission_service.rs  user_service.rs
src/utils/: crypto.rs  mod.rs  time.rs  validation.rs
