[package]
name = "olympus-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
