[package]
name = "olympus-rules"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt", "macros"] }

# Database and Redis for auth context
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "uuid", "chrono"], optional = true }
deadpool-redis = { version = "0.20.0", optional = true }
uuid = { version = "1.16.0", features = ["v4", "serde"], optional = true }
redis = { version = "0.29.0", features = ["tokio-comp"], optional = true }
tracing = { version = "0.1.41", optional = true }

[features]
default = []
# Enable authorization rules that require database/redis access
auth = ["sqlx", "deadpool-redis", "uuid", "redis", "tracing"]