[package]
name = "sisyphus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
deadpool-redis = "0.22.1"
olympus-common.workspace = true
redis = { version = "1.0.3", features = ["tokio-comp", "streams"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tempfile = "3.24.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
zip = { version = "2", features = ["deflate"] }
