[package]
name = "vanguard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["macros", "multipart"] }
chrono = { version = "0.4.43", features = ["serde"] }
deadpool-redis = "0.20"
dotenvy = "0.15"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
lazy_static = "1.5"
olympus-common.workspace = true
olympus-rules = { workspace = true, features = ["auth"] }
redis = { version = "0.29", features = ["tokio-comp"] }
regex = "1.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace", "request-id"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
zip = "2.4"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "redis"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
